@@ -1,16 +1,14 @@
 package com.fiap.soat.foodsystem.adapter.infra.repository;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
+import com.fiap.soat.foodsystem.adapter.entities.CategoriaEntity;
+import com.fiap.soat.foodsystem.adapter.mapper.CategoriaMapper;
 import com.fiap.soat.foodsystem.common.exception.NotFoundException;
 import com.fiap.soat.foodsystem.domain.model.Categoria;
-import org.modelmapper.ModelMapper;
+import com.fiap.soat.foodsystem.domain.ports.CategoriaRepositoryPort;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import com.fiap.soat.foodsystem.adapter.entities.CategoriaEntity;
-import com.fiap.soat.foodsystem.domain.ports.CategoriaRepositoryPort;
+import java.util.List;
 
 @Component
 public class CategoriaRepositoryAdapter implements CategoriaRepositoryPort {
@@ -19,33 +17,31 @@ public class CategoriaRepositoryAdapter implements CategoriaRepositoryPort {
     private CategoriaRepository categoriaRepository;
 
     @Autowired
-    private ModelMapper mapper;
+    private CategoriaMapper categoriaMapper;
 
     @Override
     public Categoria buscarCategoriaPorId(Long id) {
-        CategoriaEntity categoriaEntity = this.categoriaRepository.findById(id).orElseThrow(() -> new NotFoundException("Categoria não encontrada com o ID informado."));
-        return this.mapper.map(categoriaEntity, Categoria.class);
+        CategoriaEntity categoriaEntity = this.categoriaRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Categoria não encontrada com o ID informado."));
+        return categoriaMapper.categoriaEntityToCategoria(categoriaEntity);
     }
 
     @Override
     public Categoria salvarCategoria(Categoria categoria) {
-        CategoriaEntity categoriaEntity = mapper.map(categoria, CategoriaEntity.class);
-        CategoriaEntity categoriaSaved = this.categoriaRepository.save(categoriaEntity);
-        return mapper.map(categoriaSaved, Categoria.class);
+        CategoriaEntity categoriaEntity = this.categoriaRepository.save(categoriaMapper.categoriaToCategoriaEntity(categoria));
+        return categoriaMapper.categoriaEntityToCategoria(categoriaEntity);
     }
 
     @Override
     public Categoria editarCategoria(Categoria categoria) {
-        CategoriaEntity categoriaEntity = mapper.map(categoria, CategoriaEntity.class);
-        CategoriaEntity categoriaSaved = this.categoriaRepository.save(categoriaEntity);
-        return mapper.map(categoriaSaved, Categoria.class);
+        CategoriaEntity categoriaEntity = this.categoriaRepository.save(categoriaMapper.categoriaToCategoriaEntity(categoria));
+        return categoriaMapper.categoriaEntityToCategoria(categoriaEntity);
     }
 
     @Override
     public List<Categoria> buscarCategorias() {
         List<CategoriaEntity> listaCategoriaEntity = this.categoriaRepository.findAll();
-        List<Categoria> listaCategoria = listaCategoriaEntity.stream().map(categoriaEntity -> this.mapper.map(categoriaEntity, Categoria.class)).collect(Collectors.toList());
-        return listaCategoria;
+        return listaCategoriaEntity.stream().map(categoriaEntity -> categoriaMapper.categoriaEntityToCategoria(categoriaEntity)).toList();
     }
 
 }
